# stockparrot

./: CMakeLists.txt  LICENSE  README.md
include/stockparrot/: chess.hpp
include/uci/: uci.hpp
src/: chess.cpp  driver.cpp  engine.cpp
